Initialize WebSocket connection

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Project LeMonde</title>
-    <script type="module" src="./src/index.ts"></script>
+    <script type="module" src="./src/index.mts"></script>
     <style>
         html,
         body,
